--- a/CSS BASICS/index.html
+++ b/CSS BASICS/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Demo</title>
-    <link rel="stylesheet" type="text/css" href="./mediaQuery.css">
+    <link rel="stylesheet" type="text/css" href="./gridStyle.css">
 </head>
 <body>
-<div class="one">Div1</div>
-<div class="two">Div2</div>
+<div class="container">
+<div class="container__1">This is a div1</div>
+<div class="container__2">This is a div2</div>
+<div class="container__3">This is a div3</div>
+<div class="container__4">This is a div4</div>
+<div class="container__5">This is a div5</div>
+</div>
 </body>
 </html>
